libs/@local/hashql/ast/tests/ui/lower/type-extractor/definition/generics-param-count-mismatch.jsonc
//@ run: fail
//@ description: Tests error handling when wrong number of generic params are provided
[
  "type",
  "Pair<A, B>",
  { "#tuple": ["A", "B"] },
  [
    "type",
    "Invalid",
    "Pair<Number>",
    //~^ ERROR Type `Pair` needs 2 type parameters, but only 1 was provided
    "_"
  ]
]
